Unable to join to active directory after KB5008380/CVE-2021-42287
We've recently applied the "Enforcement" phase of KB5008380 from Microsoft on our active directories. When 'PacRequestorEnforcement' is set to 2, joining an active directory stops working.
The issue happens because adcli is not able to set computer password on the computer object during the join process. RedHat has an article about the issue. Problem with Active Directory Join after KB5008380.